@@ -1,3 +1,8 @@
+Thu Nov 06 00:00:28 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: a tiny bit of cleanup, start implementing
+	  slopefield/vectorfield graphing support.
+
 Tue Nov 04 00:46:40 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: add checkbutton to allow for no legends on the
